--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caisas Koehlin - Interactive Resume</title>
+    <link rel="stylesheet" href="large-screen.css">
+    <link rel="stylesheet" href="small-screen.css">
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
 </head>
