--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-size">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
 </head>
-<body>
+<body class="full-size dark-bg">
+    <div class="full-size">
+        <header>
+            <h1>Caisa Köhlin</h1>
+        </header>
+    </div>
     
 </body>
 </html>
