--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
 </head>
-<body class="full-size dark-bg">
+<body class="full-size">
     <div class="full-size">
         <header>
-            <h1>Caisa Köhlin</h1>
+            <div class="site-logo">
+                <a href="index.html">Caisa Köhlin</a>
+            </div>
+            
         </header>
     </div>
     
