--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </head>
-<body>
+<body class="m-4 mt-1">
+    <!--Navbar-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Caisa Köhlin</a>
@@ -36,28 +37,28 @@
       </nav>
     
 
-
-<div class="row">
+<!--Hobby cards-->
+<div class="row text-center">
     <h2 class="text-center">Hobbies</h2>
-    <div class="card col-sm-3">
+    <div class="card border-light col-sm-3">
         <img src="./SVG/designer.svg" class="card-img-top" alt="girl at desk with jacket on coat rack">
         <div class="card-body">
           <p class="card-text">KNITTING</p>
         </div>
       </div>
-      <div class="card col-sm-3">
+      <div class="card border-light col-sm-3">
         <img src="./SVG/notebook.svg" class="card-img-top" alt="woman writing in notebook">
         <div class="card-body">
           <p class="card-text">SOLVING CROSSWORDS</p>
         </div>
       </div>
-      <div class="card col-sm-3">
+      <div class="card border-light col-sm-3">
         <img src="./SVG/typewriter.svg" class="card-img-top" alt="typewriter">
         <div class="card-body">
           <p class="card-text">READING & WRITING</p>
         </div>
       </div>
-      <div class="card col-sm-3">
+      <div class="card border-light col-sm-3">
         <img src="./SVG/surfboard.svg" class="card-img-top" alt="man holding surf board">
         <div class="card-body">
           <p class="card-text">STAND UP PADDLE BOARDING</p>
