--- a/index.html
+++ b/index.html
@@ -1,76 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caisas Koehlin - Interactive Resume</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <script src="bootstrap.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </head>
+
 <body class="m-4 mt-1">
     <!--Navbar-->
-      <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Caisa Köhlin</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="projects.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/caisa-koehlin/"><i><i class="fa-brands fa-linkedin"></i></i></a>
-              </li>  
-              <li class="nav-item">
-                <a class="nav-link" href="https://github.com/caisak"><i><i class="fa-brands fa-github"></i></i></a>
-              </li> 
-            </ul>
-          </div>
+            <a class="navbar-brand" href="index.html">Caisa Köhlin</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/caisa-koehlin/"><i><i
+                                    class="fa-brands fa-linkedin i-color"></i></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/caisak"><i><i
+                                    class="fa-brands fa-github i-color"></i></i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
-    
+    </nav>
 
-<!--Hobby cards-->
-<div class="row text-center">
-    <h2 class="text-center">Hobbies</h2>
-    <div class="card border-light col-sm-3">
-        <img src="./SVG/designer.svg" class="card-img-top" alt="girl at desk with jacket on coat rack">
-        <div class="card-body">
-          <p class="card-text">KNITTING</p>
-        </div>
-      </div>
-      <div class="card border-light col-sm-3">
-        <img src="./SVG/notebook.svg" class="card-img-top" alt="woman writing in notebook">
-        <div class="card-body">
-          <p class="card-text">SOLVING CROSSWORDS</p>
-        </div>
-      </div>
-      <div class="card border-light col-sm-3">
-        <img src="./SVG/typewriter.svg" class="card-img-top" alt="typewriter">
-        <div class="card-body">
-          <p class="card-text">READING & WRITING</p>
-        </div>
-      </div>
-      <div class="card border-light col-sm-3">
-        <img src="./SVG/surfboard.svg" class="card-img-top" alt="man holding surf board">
-        <div class="card-body">
-          <p class="card-text">STAND UP PADDLE BOARDING</p>
-        </div>
-      </div>
 
-</div>
+    <!--Hobby cards-->
+    <div class="row text-center">
+        <h2 class="text-center">Hobbies</h2>
+        <div class="card border-light col-sm-3">
+            <img src="./SVG/designer.svg" class="card-img-top" alt="girl at desk with jacket on coat rack">
+            <div class="card-body">
+                <p class="card-text">KNITTING</p>
+            </div>
+        </div>
+        <div class="card border-light col-sm-3">
+            <img src="./SVG/notebook.svg" class="card-img-top" alt="woman writing in notebook">
+            <div class="card-body">
+                <p class="card-text">SOLVING CROSSWORDS</p>
+            </div>
+        </div>
+        <div class="card border-light col-sm-3">
+            <img src="./SVG/typewriter.svg" class="card-img-top" alt="typewriter">
+            <div class="card-body">
+                <p class="card-text">READING & WRITING</p>
+            </div>
+        </div>
+        <div class="card border-light col-sm-3">
+            <img src="./SVG/surfboard.svg" class="card-img-top" alt="man holding surf board">
+            <div class="card-body">
+                <p class="card-text">STAND UP PADDLE BOARDING</p>
+            </div>
+        </div>
+    </div>
 
+    <div class="container">
+    <div class="row footer">
+        <div class="col">
+            <img class="profile-picture" src="./IMG_4095.jpg" alt="Caisa Köhlin profile picture">
+        </div>
+        <div class="col">
+            <p>caisa.kohlin@medieinstitutet.se</p>
+            <p>+46 727071495</p>
+        </div>
+
+
+
+        <div class="row">
+            <div class="col">
+            <a href=""><i class="fa-solid fa-envelope i-footer-color"></i></a>
+             </div>
+             <div class="col">
+            <a class="nav-link" href="https://www.linkedin.com/in/caisa-koehlin/"><i>
+                <i class="fa-brands fa-linkedin i-footer-color"></i></i></a>
+            </div>
+            <div class="col">
+            <a class="nav-link" href="https://github.com/caisak"><i class="fa-brands fa-github i-footer-color"></i></>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+
+    </div>
+
+
+
+
+    </div>
 
 </body>
+
 </html>
