--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caisa Koehlin - Projects</title>
+    <title>Caisa Koehlin - Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
+                        <a class="nav-link" href="projects.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -51,32 +51,37 @@
         </div>
     </nav>
 
-    <!--Projects-->
-    <h1 class="text-center">Projects</h1>
+    <!--Project cards-->
+    <h1 class="text-center">Portfolio</h1>
     <div class="flex row">
-    <div class="card border-light col-sm-6 mt-1">
-        <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
-        <div class="card-body">
-            <h4 class="card-text">Project Gutenberg Modernized</h4>
-            <p class="card-text">This was our second school assignment for the HTML & CSS course. The assignment was to modernize a website that was completely or partially non-responsive.</p>
-            <p class="card-text"><strong>Made with</strong>
-            <span>
-                <button class="btn btn-light">HTML</button>
-                <button class="btn btn-light">CSS</button>
-            </span></p>
+        <div class="card border-light col-sm-6 mt-2">
+            <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
+            <div class="card-body">
+                <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Project Gutenberg Modernized</a></h4>
+                <p class="card-text">This was our second school assignment for the HTML & CSS course. The assignment was
+                    to modernize a website that was completely or partially non-responsive.</p>
+                <div class="card-footer bg-transparent"><strong>Made with</strong>
+                    <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
+                    <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
+                    <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Project-Gutenberg-modernized"><i
+                        class="fa-brands fa-github"></i></a></button>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <div class="card border-light col-sm-6 mt-1">
-        <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
-        <div class="card-body">
-            <h4 class="card-text">Project Gutenberg Modernized</h4>
-            <p class="card-text">This was our second school assignment for the HTML & CSS course. The assignment was to modernize a website that was completely or partially non-responsive.</p>
-            <p class="card-text"><strong>Made with</strong>
-            <span>
-                <button class="btn btn-light">HTML</button>
-                <button class="btn btn-light">CSS</button>
-            </span></p>
+        <div class="card border-light col-sm-6 mt-2">
+            <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
+            <div class="card-body">
+                <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Some other Project</a></h4>
+                <p class="card-text">Description I'll write when I have a project I feel like I can show to the world.
+                </p>
+                <div class="card-footer bg-transparent"><strong>Made with</strong>
+                    <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
+                    <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
+                    <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Project-Gutenberg-modernized"><i
+                        class="fa-brands fa-github"></i></a></button>
+                    
+                </div>
+            </div>
         </div>
     </div>
-</div>
