js read more read less button

--- a/projects.html
+++ b/projects.html
@@ -78,8 +78,13 @@
                 <div class="card-footer bg-transparent"><strong>Made with</strong>
                     <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
                     <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
+                    <button class="btn btn-light"><i class="fa-brands fa-square-js"></i></button>
                     <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Project-Gutenberg-modernized"><i
                         class="fa-brands fa-github"></i></a></button>
+
+
+
+                        
                     
                 </div>
             </div>
