--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
         </div>
     </nav>
     
+    <!--Experience-->
+
+    <!--Skills-->
+
+
+    <!--Selected Projects-->
+    <div>
+        <h2 class="text-center">Selected Projects</h2>
+    <div class="card border-light col-sm-4 mt-3">
+        <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
+        <div class="card-body">
+            <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Project Gutenberg Modernized</a></h4>
+            <p class="card-text">This was our second school assignment for the HTML & CSS course. <span id="dots">...</span><span id="more"> The assignment was
+                to modernize a website that was completely or partially non-responsive.</span></p>
+                <button class="btn btn-sm btn-outline-dark" onclick="readMoreReadLess()" id="myBtn">Read more</button>
+            <div class="card-footer bg-transparent"><strong>Made with</strong>
+                <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
+                <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
+                <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Project-Gutenberg-modernized"><i
+                    class="fa-brands fa-github"></i></a></button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
     <div class="container">
