add logos to skills

--- a/index.html
+++ b/index.html
@@ -52,13 +52,26 @@
     </nav>
     
     <!--Experience-->
+    <div>
+        <h2 class="text-center">Experience</h2>
+    </div>
 
     <!--Skills-->
+    <div>
+        <h2 class="text-center">Skills</h2>
+        <img class="skill-size" src="./HTML5_Logo_wordmark.svg" alt="HTML logo">
+        <img class="skill-size" src="./CSS3_logo_and_wordmark.svg" alt="CSS logo">
+        <img class="skill-size border-radius" src="./JavaScript-logo.png" alt="JavaScript logo">
+        <img class="skill-size" src="./Figma-logo.svg" alt="Figma logo">
+        <img class="skill-size" src="./Git-logo.svg" alt="Git logo">
+        <img class="skill-size" src="./Adobe_Premiere_Pro_Logo.svg" alt="Adobe Premiere Pro logo">
+        
+    </div>
 
 
     <!--Selected Projects-->
     <div>
-        <h2 class="text-center">Selected Projects</h2>
+        <h2 class="text-center mt-4">Selected Projects</h2>
     <div class="card border-light col-sm-4 mt-3">
         <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
         <div class="card-body">
