add README.md file

--- a/projects.html
+++ b/projects.html
@@ -70,16 +70,16 @@
         </div>
 
         <div class="card border-light col-sm-6 mt-2">
-            <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
+            <img class="PGM-img" src="./rock-p-s.png" alt="image of project gutenberg modernized">
             <div class="card-body">
-                <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Some other Project</a></h4>
-                <p class="card-text">Description I'll write when I have a project I feel like I can show to the world.
+                <h4 class="card-title"><a href="https://caisak.github.io/Rock-Paper-Scissors/">Rock Paper Scissors</a></h4>
+                <p class="card-text">A simple rock, paper, scissors game made primarily with JavaScript.
                 </p>
                 <div class="card-footer bg-transparent"><strong>Made with</strong>
+                    <button class="btn btn-light"><i class="fa-brands fa-square-js"></i></button>
                     <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
                     <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
-                    <button class="btn btn-light"><i class="fa-brands fa-square-js"></i></button>
-                    <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Project-Gutenberg-modernized"><i
+                    <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Rock-Paper-Scissors"><i
                         class="fa-brands fa-github"></i></a></button>
 
 
