change folder name and all image src

--- a/about.html
+++ b/about.html
@@ -63,25 +63,25 @@
     <div class="row text-center">
         <h2 class="text-center mt-1">Hobbies</h2>
         <div class="card border-light col-sm-3">
-            <img src="./SVG/designer.svg" class="card-img-top" alt="girl at desk with jacket on coat rack">
+            <img src="./SVG and PNG/designer.svg" class="card-img-top" alt="girl at desk with jacket on coat rack">
             <div class="card-body">
                 <p class="card-text">KNITTING</p>
             </div>
         </div>
         <div class="card border-light col-sm-3">
-            <img src="./SVG/notebook.svg" class="card-img-top" alt="woman writing in notebook">
+            <img src="./SVG and PNG/notebook.svg" class="card-img-top" alt="woman writing in notebook">
             <div class="card-body">
                 <p class="card-text">SOLVING CROSSWORDS</p>
             </div>
         </div>
         <div class="card border-light col-sm-3">
-            <img src="./SVG/typewriter.svg" class="card-img-top" alt="typewriter">
+            <img src="./SVG and PNG/typewriter.svg" class="card-img-top" alt="typewriter">
             <div class="card-body">
                 <p class="card-text">READING & WRITING</p>
             </div>
         </div>
         <div class="card border-light col-sm-3">
-            <img src="./SVG/surfboard.svg" class="card-img-top" alt="man holding surf board">
+            <img src="./SVG and PNG/surfboard.svg" class="card-img-top" alt="man holding surf board">
             <div class="card-body">
                 <p class="card-text">STAND UP PADDLE BOARDING</p>
             </div>
