--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,9 @@
         </div>
     </nav>
 
+
+    <div>
+
     <!--Project cards-->
     <h1 class="text-center">Portfolio</h1>
     <div class="flex row">
@@ -58,11 +61,13 @@
             <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
             <div class="card-body">
                 <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Project Gutenberg Modernized</a></h4>
-                <p class="card-text">This was our second school assignment for the HTML & CSS course. The assignment was
-                    to modernize a website that was completely or partially non-responsive.</p>
+                <p class="card-text">This was our second school assignment for the HTML & CSS course<span id="dots">...</span><span id="more">. The assignment was
+                    to modernize a website that was completely or partially non-responsive.</span></p>
+                    <button class="btn btn-sm btn-outline-dark" onclick="readMoreReadLess()" id="myBtn">Read more</button>
                 <div class="card-footer bg-transparent"><strong>Made with</strong>
                     <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
                     <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
+                    <button class="btn btn-light"><i class="fa-brands fa-bootstrap"></i></button>
                     <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Project-Gutenberg-modernized"><i
                         class="fa-brands fa-github"></i></a></button>
                 </div>
@@ -80,12 +85,7 @@
                     <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
                     <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
                     <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Rock-Paper-Scissors"><i
-                        class="fa-brands fa-github"></i></a></button>
-
-
-
-                        
-                    
+                        class="fa-brands fa-github"></i></a></button>    
                 </div>
             </div>
         </div>
