--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <img class="skill-size border-radius" src="./JavaScript-logo.png" alt="JavaScript logo">
         <img class="skill-size" src="./Figma-logo.svg" alt="Figma logo">
         <img class="skill-size" src="./Git-logo.svg" alt="Git logo">
+        <img src="./Bootstrap_logo.svg" alt="Bootstrap logo" class="skill-size">
         <img class="skill-size" src="./Adobe_Premiere_Pro_Logo.svg" alt="Adobe Premiere Pro logo">
         </div>
     </div>
@@ -81,7 +82,7 @@
         <h2 class="text-center mt-4">Selected Projects</h2>
     <div class="card border-light col-sm-4 mt-3">
         <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
-        <div class="card-body">
+        <div class="card-body text-center">
             <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Project Gutenberg Modernized</a></h4>
             <p class="card-text">This was our second school assignment for the HTML & CSS course. <span id="dots">...</span><span id="more"> The assignment was
                 to modernize a website that was completely or partially non-responsive.</span></p>
@@ -89,6 +90,7 @@
             <div class="card-footer bg-transparent"><strong>Made with</strong>
                 <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
                 <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
+                <button class="btn btn-light"><i class="fa-brands fa-bootstrap"></i></button>
                 <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Project-Gutenberg-modernized"><i
                     class="fa-brands fa-github"></i></a></button>
             </div>
@@ -122,8 +124,7 @@
 <!--Butcher the fuck out of this perhaps myes-->
 <div class="card border-light col-sm-4 mt-2">
     <img class="PGM-img" src="./rock-p-s.png" alt="image of rock paper scissors website">
-    <div class="card-body">
-        
+    <div class="card-body text-center">
         <h4><a href="https://caisak.github.io/Rock-Paper-Scissors/">Rock paper scissors</h4></a>
         <div class="card-footer bg-transparent"><strong>Made with</strong>
             <button class="btn btn-light"><i class="fa-brands fa-square-js"></i></button>
