accordion in about me page

--- a/projects.html
+++ b/projects.html
@@ -78,8 +78,7 @@
             <img class="PGM-img" src="./rock-p-s.png" alt="image of project gutenberg modernized">
             <div class="card-body">
                 <h4 class="card-title"><a href="https://caisak.github.io/Rock-Paper-Scissors/">Rock Paper Scissors</a></h4>
-                <p class="card-text">A simple rock, paper, scissors game made primarily with JavaScript.
-                </p>
+                <p class="card-text">A simple rock, paper, scissors game made primarily with JavaScript.</p>
                 <div class="card-footer bg-transparent"><strong>Made with</strong>
                     <button class="btn btn-light"><i class="fa-brands fa-square-js"></i></button>
                     <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
@@ -90,3 +89,6 @@
             </div>
         </div>
     </div>
+
+
+
