--- a/about.html
+++ b/about.html
@@ -88,8 +88,105 @@
         </div>
     </div>
 
-    
-
+    <!--Accordion with my top 5-->
+    <div class="mt-5">
+    <h2 class="text-center">My Top 5</h2>
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                Favorite Literary Genres
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+              Gothic horror, fantasy and science fiction
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Top 5 Video Games
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              1. The Legend of Zelda: Twilight Princess
+              <br>
+              2. The Legend of Zelda: Ocarina of Time
+              <br>
+              3. Resident Evil 4
+              <br>
+              4. Animal crossing: New Horizons
+              <br>
+              5. Oxenfree
+              <br>
+              6. Bonus! Night in the Woods
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Top 5 Drinks
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              1. Brown Sugar Boba
+              <br>
+              2. Salted Caramel Iced Latte
+              <br>
+              3. Matcha Latte
+              <br>
+              4. Peach Fruit Tea with Jelly
+              <br>
+              5. Julmust
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                Top 5 Things To Knit
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                1. Socks
+                <br>
+                2. Brioche sweaters
+                <br>
+                3. Oslo hat by Petiteknit
+                <br>
+                4. A vest but in reality probably a sock
+                <br>
+                5. Frankensocks™, socks made of scrap yarn from all the other finished socks.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                Top 5 Reasons Why You Should Hire Me
+              </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                1. I'm detail oriented
+                <br>
+                2. You're never going to hear me say the phrase "It's too much work"
+                <br>
+                3. I'm funny, compassionate and used to customer service
+                <br>
+                4. I love being part of a team and push people to do their best
+                <br>
+                5. I value workshopping ideas and I don't take negative feedback personally
+              </div>
+            </div>
+          </div>
+      </div>
 
 
 
