night time commit

--- a/about.html
+++ b/about.html
@@ -57,30 +57,34 @@
     <h2 class="text-center mt-1">Bio</h2>
 </div>
 
+<div class="quote-square">
+
+</div>
+
 
 
     <!--Hobby cards-->
     <div class="row text-center">
         <h2 class="text-center mt-1">Hobbies</h2>
-        <div class="card border-light col-sm-3">
+        <div class="card border-light col-sm-3 p-2">
             <img src="./SVG and PNG/designer.svg" class="card-img-top" alt="girl at desk with jacket on coat rack">
             <div class="card-body">
                 <p class="card-text">KNITTING</p>
             </div>
         </div>
-        <div class="card border-light col-sm-3">
+        <div class="card border-light col-sm-3 p-2">
             <img src="./SVG and PNG/notebook.svg" class="card-img-top" alt="woman writing in notebook">
             <div class="card-body">
                 <p class="card-text">SOLVING CROSSWORDS</p>
             </div>
         </div>
-        <div class="card border-light col-sm-3">
+        <div class="card border-light col-sm-3 p-2">
             <img src="./SVG and PNG/typewriter.svg" class="card-img-top" alt="typewriter">
             <div class="card-body">
                 <p class="card-text">READING & WRITING</p>
             </div>
         </div>
-        <div class="card border-light col-sm-3">
+        <div class="card border-light col-sm-3 p-2">
             <img src="./SVG and PNG/surfboard.svg" class="card-img-top" alt="man holding surf board">
             <div class="card-body">
                 <p class="card-text">STAND UP PADDLE BOARDING</p>
@@ -189,5 +193,28 @@
       </div>
 
 
+<!--Footer-->
+<div class="d-flex justify-content-center mt-5">
+    <div>
+        <div class="col-sm-6">
+            <img class="profile-picture" src="./IMG_4095.jpg" alt="Caisa Köhlin profile picture">
+        </div>
+        <div class="col-sm-6 text-center mt-4">
+            <p><strong>caisa.kohlin@medieinstitutet.se</strong></p>
+            <p><strong>+46 727071495</strong></p>
+        </div>
+    </div>
+</div>
 
-    
+<div class="d-flex justify-content-center">
+    <div class="p-2">
+        <a href="mailto:caisa.kohlin@medieinstitutet.se"><i class="fa-solid fa-envelope i-color"></i></a>
+    </div>
+    <div class="p-2">
+        <a class="nav-link" href="https://www.linkedin.com/in/caisa-koehlin/"><i>
+                <i class="fa-brands fa-linkedin i-color"></i></i></a>
+    </div>
+    <div class="p-2">
+        <a class="nav-link" href="https://github.com/caisak"><i class="fa-brands fa-github i-color"></i></a>
+    </div>
+</div>
