--- a/projects.html
+++ b/projects.html
@@ -56,8 +56,8 @@
 
     <!--Project cards-->
     <h1 class="text-center">Portfolio</h1>
-    <div class="flex row">
-        <div class="card border-light col-sm-6 mt-2">
+    <div class="flex row justify-content-evenly">
+        <div class="card border-light col-sm-5 mt-2 p-2">
             <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
             <div class="card-body">
                 <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Project Gutenberg Modernized</a></h4>
@@ -74,7 +74,7 @@
             </div>
         </div>
 
-        <div class="card border-light col-sm-6 mt-2">
+        <div class="card border-light col-sm-5 mt-2 p-2">
             <img class="PGM-img" src="./rock-p-s.png" alt="image of project gutenberg modernized">
             <div class="card-body">
                 <h4 class="card-title"><a href="https://caisak.github.io/Rock-Paper-Scissors/">Rock Paper Scissors</a></h4>
@@ -92,3 +92,28 @@
 
 
 
+<!--Footer-->
+<div class="d-flex justify-content-center mt-5">
+    <div>
+        <div class="col-sm-6">
+            <img class="profile-picture" src="./IMG_4095.jpg" alt="Caisa Köhlin profile picture">
+        </div>
+        <div class="col-sm-6 text-center mt-4">
+            <p><strong>caisa.kohlin@medieinstitutet.se</strong></p>
+            <p><strong>+46 727071495</strong></p>
+        </div>
+    </div>
+</div>
+
+<div class="d-flex justify-content-center">
+    <div class="p-2">
+        <a href="mailto:caisa.kohlin@medieinstitutet.se"><i class="fa-solid fa-envelope i-color"></i></a>
+    </div>
+    <div class="p-2">
+        <a class="nav-link" href="https://www.linkedin.com/in/caisa-koehlin/"><i>
+                <i class="fa-brands fa-linkedin i-color"></i></i></a>
+    </div>
+    <div class="p-2">
+        <a class="nav-link" href="https://github.com/caisak"><i class="fa-brands fa-github i-color"></i></a>
+    </div>
+</div>
