--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
 
     <!--Selected Projects-->
-    <div class="d-flex row">
+    <div class="d-flex row justify-content-evenly">
         <h2 class="text-center mt-4">Selected Projects</h2>
         <!--Project Gutenberg Modernized-->
-        <div class="card border-light col-sm-4 mt-3">
+        <div class="card border-light col-sm-3 mt-3 p-2">
             <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
             <div class="card-body text-center">
                 <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Project
@@ -98,10 +98,11 @@
             </div>
         </div>
     <!--Rock Paper Scissors-->
-        <div class="card border-light col-sm-4 mt-3">
+        <div class="card border-light col-sm-3 mt-3 p-2">
             <img class="PGM-img" src="./rock-p-s.png" alt="image of rock paper scissors website">
             <div class="card-body text-center">
-                <h4><a href="https://caisak.github.io/Rock-Paper-Scissors/">Rock paper scissors</h4></a>
+                <h4><a href="https://caisak.github.io/Rock-Paper-Scissors/">Rock paper scissors
+                </h4></a>
                 <div class="card-footer bg-transparent"><strong>Made with</strong>
                     <button class="btn btn-light"><i class="fa-brands fa-square-js"></i></button>
                     <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
@@ -109,16 +110,11 @@
                     <button class="btn btn-light"><a class="nav-link"
                             href="https://github.com/caisak/Rock-Paper-Scissors"><i
                                 class="fa-brands fa-github"></i></a></button>
-
-
-
-
-
                 </div>
             </div>
         </div>
     <!--RPS again because ideally I want a nice row with three projects okay, sue me-->
-    <div class="card border-light col-sm-4 mt-3">
+    <div class="card border-light col-sm-3 mt-3 p-2">
         <img class="PGM-img" src="./rock-p-s.png" alt="image of rock paper scissors website">
         <div class="card-body text-center">
             <h4><a href="https://caisak.github.io/Rock-Paper-Scissors/">Pretend this is something else</h4></a>
@@ -129,15 +125,10 @@
                 <button class="btn btn-light"><a class="nav-link"
                         href="https://github.com/caisak/Rock-Paper-Scissors"><i
                             class="fa-brands fa-github"></i></a></button>
-
-
-
-
-
             </div>
         </div>
     </div>
-    </div>
+    
 
     <!--Footer-->
     <div class="d-flex justify-content-center mt-5">
@@ -146,25 +137,25 @@
                 <img class="profile-picture" src="./IMG_4095.jpg" alt="Caisa Köhlin profile picture">
             </div>
             <div class="col-sm-6 text-center mt-4">
-                <p>caisa.kohlin@medieinstitutet.se</p>
-                <p>+46 727071495</p>
+                <p><strong>caisa.kohlin@medieinstitutet.se</strong></p>
+                <p><strong>+46 727071495</strong></p>
             </div>
         </div>
     </div>
 
     <div class="d-flex justify-content-center">
-        <div>
+        <div class="p-2">
             <a href="mailto:caisa.kohlin@medieinstitutet.se"><i class="fa-solid fa-envelope i-color"></i></a>
         </div>
-        <div>
+        <div class="p-2">
             <a class="nav-link" href="https://www.linkedin.com/in/caisa-koehlin/"><i>
                     <i class="fa-brands fa-linkedin i-color"></i></i></a>
         </div>
-        <div>
+        <div class="p-2">
             <a class="nav-link" href="https://github.com/caisak"><i class="fa-brands fa-github i-color"></i></a>
         </div>
     </div>
-
+</div>
 
 
 </body>
