about me and education cards

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -54,7 +54,17 @@
 <!--About Me Section-->
 <div>
     <h1 class="text-center mt-1">About Me</h1>
-    <h2 class="text-center mt-1">Bio</h2>
+    <p>
+      Hi!
+      My name is Caisa.
+      I've been working on and off in customer service since I was 13 years old. I've enrolled in and dropped out of more courses than I can count because I love so many things and I want to learn forever.
+    </p>
+    <p>
+      What got me into web development was a detour to library sciences. In the intro course it was pretty firmly determined that library sciences were dead (I'm paraphrasing) and that the job would involve a fair amount of tech and processing data. I was like "Then why am I here? I might as well go and do that then."
+    </p>
+    <p>
+      So here I am. I bring with me my background in directing, editing, writing, sports coaching (!) and all my enthusiasm.
+    </p>
 </div>
 
 
@@ -62,39 +72,12 @@
 
 
 
-    <!--Hobby cards-->
-    <div class="row text-center">
-        <h2 class="text-center mt-1">Hobbies</h2>
-        <div class="card border-light col-sm-3 p-2">
-            <img src="./SVG and PNG/designer.svg" class="card-img-top" alt="girl at desk with jacket on coat rack">
-            <div class="card-body">
-                <p class="card-text">KNITTING</p>
-            </div>
-        </div>
-        <div class="card border-light col-sm-3 p-2">
-            <img src="./SVG and PNG/notebook.svg" class="card-img-top" alt="woman writing in notebook">
-            <div class="card-body">
-                <p class="card-text">SOLVING CROSSWORDS</p>
-            </div>
-        </div>
-        <div class="card border-light col-sm-3 p-2">
-            <img src="./SVG and PNG/typewriter.svg" class="card-img-top" alt="typewriter">
-            <div class="card-body">
-                <p class="card-text">READING & WRITING</p>
-            </div>
-        </div>
-        <div class="card border-light col-sm-3 p-2">
-            <img src="./SVG and PNG/surfboard.svg" class="card-img-top" alt="man holding surf board">
-            <div class="card-body">
-                <p class="card-text">STAND UP PADDLE BOARDING</p>
-            </div>
-        </div>
-    </div>
+
 
     <!--Accordion My Top 5-->
     <div class="mt-5">
     <h2 class="text-center">My Top 5</h2>
-    <div class="accordion" id="accordionExample">
+    <div class="accordion mt-4" id="accordionExample">
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
