--- a/about.html
+++ b/about.html
@@ -56,11 +56,11 @@
     <h1 class="text-center mt-1">About Me</h1>
     <p>
       Hi!
-      My name is Caisa.
-      I've been working on and off in customer service since I was 13 years old. I've enrolled in and dropped out of more courses than I can count because I love so many things and I want to learn forever.
+      <br>
+      I'm Caisa. I started my career in customer service washing dishes when I was 13. Since then I've worked as a cashier, deli clerk and barista.  
     </p>
     <p>
-      What got me into web development was a detour to library sciences. In the intro course it was pretty firmly determined that library sciences were dead (I'm paraphrasing) and that the job would involve a fair amount of tech and processing data. I was like "Then why am I here? I might as well go and do that then."
+      I got into web development after studying film production and sports science. I've aquired and honed some skills along the way that I think fit perfectly with web development. 
     </p>
     <p>
       So here I am. I bring with me my background in directing, editing, writing, sports coaching (!) and all my enthusiasm.
@@ -172,7 +172,7 @@
                 <br>
                 2. You're never going to hear me say the phrase "It's too much work"
                 <br>
-                3. I'm funny, compassionate and used to customer service
+                3. I'm compassionate and used to customer service
                 <br>
                 4. I love being part of a team and push people to do their best
                 <br>
