put images in folder

--- a/about.html
+++ b/about.html
@@ -54,17 +54,21 @@
 <!--About Me Section-->
 <div>
     <h1 class="text-center mt-1">About Me</h1>
-    <p>
+    <div class="bg-white rounded-corners">
+    <p class="m-3">
+      <br>
       Hi!
       <br>
       I'm Caisa. I started my career in customer service washing dishes when I was 13. Since then I've worked as a cashier, deli clerk and barista.  
     </p>
-    <p>
+    <p class="m-3">
       I got into web development after studying film production and sports science. I've aquired and honed some skills along the way that I think fit perfectly with web development. 
     </p>
-    <p>
+    <p class="m-3">
       So here I am. I bring with me my background in directing, editing, writing, sports coaching (!) and all my enthusiasm.
     </p>
+    <br>
+  </div>
 </div>
 
 
@@ -187,7 +191,7 @@
 <div class="d-flex justify-content-center mt-5">
     <div>
         <div class="col-sm-6">
-            <img class="profile-picture" src="./IMG_4095.jpg" alt="Caisa Köhlin profile picture">
+            <img class="profile-picture" src="./Images and SVGs/profile-pic.jpg" alt="Caisa Köhlin profile picture">
         </div>
         <div class="col-sm-6 text-center mt-4">
             <p><strong>caisa.kohlin@medieinstitutet.se</strong></p>
