--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h2 class="text-center mt-4">Selected Projects</h2>
         <!--Project Gutenberg Modernized-->
         <div id="shade" class="card border-light col-sm-3 mt-4 p-2">
-            <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
+            <img class="PGM-img" src="./Images and SVGs/PGM-project.png" alt="image of project gutenberg modernized">
             <div class="card-body text-center">
                 <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Project
                         Gutenberg Modernized</a></h4>
@@ -134,7 +134,7 @@
         </div>
         <!--Rock Paper Scissors-->
         <div id="shade" class="card border-light col-sm-3 mt-4 p-2">
-            <img class="PGM-img" src="./rock-p-s.png" alt="image of rock paper scissors website">
+            <img class="PGM-img" src="./Images and SVGs/rock-p-s.png" alt="image of rock paper scissors website">
             <div class="card-body text-center">
                 <h4><a href="https://caisak.github.io/Rock-Paper-Scissors/">Rock paper scissors
                 </h4></a>
@@ -150,7 +150,7 @@
         </div>
         <!--RPS again because-->
     <div id="shade" class="card border-light col-sm-3 mt-4 p-2">
-        <img class="PGM-img" src="./rock-p-s.png" alt="image of rock paper scissors website">
+        <img class="PGM-img" src="./Images and SVGs/rock-p-s.png" alt="image of rock paper scissors website">
         <div class="card-body text-center">
             <h4><a href="https://caisak.github.io/Rock-Paper-Scissors/">Pretend this is something else</h4></a>
             <div class="card-footer bg-transparent"><strong>Made with</strong>
@@ -169,25 +169,25 @@
         <h2 class="text-center">Skills</h2>
         <div class="row align-items-start">
             <div class="col mt-1">
-                <img class="skill-size" src="./HTML5_Logo_wordmark.svg" alt="HTML logo">
+                <img class="skill-size" src="./Images and SVGs/HTML5_Logo_wordmark.svg" alt="HTML logo">
             </div>
             <div class="col mt-2">
-                <img class="skill-size" src="./CSS3_logo_and_wordmark.svg" alt="CSS logo">
+                <img class="skill-size" src="./Images and SVGs/CSS3_logo_and_wordmark.svg" alt="CSS logo">
             </div>
             <div class="col mt-2">
-            <img class="skill-size border-radius" src="./JavaScript-logo.png" alt="JavaScript logo">
+            <img class="skill-size border-radius" src="./Images and SVGs/JavaScript-logo.png" alt="JavaScript logo">
             </div>
             <div class="col mt-2">
-            <img class="skill-size" src="./Figma-logo.svg" alt="Figma logo">
+            <img class="skill-size" src="./Images and SVGs/Figma-logo.svg" alt="Figma logo">
             </div>
             <div class="col mt-2">
-            <img class="skill-size" src="./Git-logo.svg" alt="Git logo">
+            <img class="skill-size" src="./Images and SVGs/Git-logo.svg" alt="Git logo">
             </div>
             <div class="col mt-2">
-            <img class="skill-size" src="./Bootstrap_logo.svg" alt="Bootstrap logo">
+            <img class="skill-size" src="./Images and SVGs/Bootstrap_logo.svg" alt="Bootstrap logo">
             </div>
             <div class="col mt-2">
-            <img class="skill-size" src="./Adobe_Premiere_Pro_Logo.svg" alt="Adobe Premiere Pro logo">
+            <img class="skill-size" src="./Images and SVGs/Adobe_Premiere_Pro_Logo.svg" alt="Adobe Premiere Pro logo">
             </div>
         </div>
     <div class="green-space"></div>
@@ -196,7 +196,7 @@
     <div class="d-flex justify-content-center mt-5">
         <div>
             <div class="col-sm-6">
-                <img class="profile-picture" src="./IMG_4095.jpg" alt="Caisa Köhlin profile picture">
+                <img class="profile-picture" src="./Images and SVGs/profile-pic.jpg" alt="Caisa Köhlin profile picture">
             </div>
             <div class="col-sm-6 text-center mt-4">
                 <p><strong>caisa.kohlin@medieinstitutet.se</strong></p>
