--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     <h1 class="text-center">Portfolio</h1>
     <div class="flex row justify-content-evenly">
         <div id="shade" class="card border-light col-sm-5 mt-2 p-2">
-            <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
+            <img class="PGM-img" src="./Images and SVGs/PGM-project.png" alt="image of project gutenberg modernized">
             <div class="card-body">
                 <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Project Gutenberg Modernized</a></h4>
                 <p class="card-text">This was our second school assignment for the HTML & CSS course<span id="dots">...</span><span id="more">. The assignment was
@@ -75,7 +75,7 @@
         </div>
 
         <div id="shade" class="card border-light col-sm-5 mt-2 p-2">
-            <img class="PGM-img" src="./rock-p-s.png" alt="image of project gutenberg modernized">
+            <img class="PGM-img" src="./Images and SVGs/rock-p-s.png" alt="image of project gutenberg modernized">
             <div class="card-body">
                 <h4 class="card-title"><a href="https://caisak.github.io/Rock-Paper-Scissors/">Rock Paper Scissors</a></h4>
                 <p class="card-text">A simple rock, paper, scissors game made primarily with JavaScript.</p>
@@ -96,7 +96,7 @@
 <div class="d-flex justify-content-center mt-5">
     <div>
         <div class="col-sm-6">
-            <img class="profile-picture" src="./IMG_4095.jpg" alt="Caisa Köhlin profile picture">
+            <img class="profile-picture" src="./Images and SVGs/profile-pic.jpg" alt="Caisa Köhlin profile picture">
         </div>
         <div class="col-sm-6 text-center mt-4">
             <p><strong>caisa.kohlin@medieinstitutet.se</strong></p>
