add more portfolio cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,13 +50,45 @@
             </div>
         </div>
     </nav>
-
-
     <div>
 
     <!--Project cards-->
+    <!-- project gutenberg modernized -->
     <h1 class="text-center">Portfolio</h1>
     <div class="flex row justify-content-evenly">
+        <!-- vegokassen -->
+    <div id="shade" class="card border-light col-sm-5 mt-2 p-2">
+        <img class="PGM-img" src="./Images and SVGs/rock-p-s.png" alt="image of project gutenberg modernized">
+        <div class="card-body">
+            <h4 class="card-title"><a href="https://vegokassen.netlify.app/">Vegokassen</a></h4>
+            <p class="card-text">A (fake) vegetarian meal kit service. Browse products and add to cart, read reviews and get green and inspired.</p>
+            <div class="card-footer bg-transparent"><strong>Made with</strong>
+                <button class="btn btn-light"><i class="fa-brands fa-square-js"></i></button>
+                <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
+                <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
+                <button class="btn btn-light"><a class="nav-link" href="https://github.com/caisak/Vegokassen"><i
+                    class="fa-brands fa-github"></i></a></button>    
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- moon mission -->
+<div id="shade" class="card border-light col-sm-5 mt-2 p-2">
+    <img class="PGM-img" src="./Images and SVGs/rock-p-s.png" alt="image of project gutenberg modernized">
+    <div class="card-body">
+        <h4 class="card-title"><a href="">Moon Mission</a></h4>
+        <p class="card-text">A simple rock, paper, scissors game made primarily with JavaScript.</p>
+        <div class="card-footer bg-transparent"><strong>Made with</strong>
+            <button class="btn btn-light"><i class="fa-brands fa-square-js"></i></button>
+            <button class="btn btn-light"><i class="fa-brands fa-html5"></i></button>
+            <button class="btn btn-light"><i class="fa-brands fa-css3-alt"></i></button>
+            <button class="btn btn-light"><a class="nav-link" href=""><i
+                class="fa-brands fa-github"></i></a></button>    
+        </div>
+    </div>
+</div>
+</div>
         <div id="shade" class="card border-light col-sm-5 mt-2 p-2">
             <img class="PGM-img" src="./Images and SVGs/PGM-project.png" alt="image of project gutenberg modernized">
             <div class="card-body">
@@ -73,7 +105,7 @@
                 </div>
             </div>
         </div>
-
+<!-- rock paper scissors -->
         <div id="shade" class="card border-light col-sm-5 mt-2 p-2">
             <img class="PGM-img" src="./Images and SVGs/rock-p-s.png" alt="image of project gutenberg modernized">
             <div class="card-body">
@@ -88,7 +120,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    
+
 
 
 
